# socrates

./: .gitignore  AGENTS.md  README.md  Tiltfile  conductor.json  tessl.json
.cursor/: worktrees.json
backend/: README.md  openapi.json  pyproject.toml
backend/app/: main.py
backend/scripts/: export_openapi.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/api/: index.ts
scripts/: install_deps.sh
tiles/architecture/: data-infra.md  data-model.md  index.md  setup.md  tech-stack.md
tiles/features/: admin.spec.md  chat.spec.md  index.md  issue-reading.spec.md  post-generation.spec.md  response-components.spec.md  user-accounts.spec.md
tiles/python/: styleguide.md
tiles/typescript/: styleguide.md
